--- a/wordpress-hosting.html
+++ b/wordpress-hosting.html
@@ -239,9 +239,15 @@
 
     <!-- hero section -->
 
+ <style>
+
+ 
+  
+ </style>
+
     <div class="container-fluid background_random">
         <div class="container">
-            <div class="row row-design_gap d-flex  ">
+            <div class="row row-design_gap d-flex py-5" >
                 <div class="col-md-7 col-lg-6 col-sm-12  ">
                     <div class="first_section ">
                       
@@ -253,8 +259,8 @@
                 </div>
 
                 <div class="col-md-5 col-lg-6 col-sm-12 ">
-                    <div class="second_image ">
-                        <img src="./assests_wordpress_hosting/img/website-hosting.jpg" alt="Dedicated Server Hosting . ">
+                    <div class="second_image  ">
+                        <img src="./assests_wordpress_hosting/img/website-host.jpg" class="rounded" alt="Dedicated Server Hosting . ">
                     </div>
                 </div>
             </div>
@@ -763,8 +769,8 @@
     <!-- 7 days offer -->
     <div class="container-fluid offer_section_bg">
         <div class="container">
-            <div class="row py-5 " data-aos="fade-right" data-aos-offset="200" data-aos-delay="50">
-                <div class=" col-lg-10 m-auto">
+            <div class="row py-5 " data-aos="fade-up" data-aos-offset="180" data-aos-delay="60">
+                <div class=" col-12 m-auto">
                     <div class="main_box-1">
                         <h2>7-Days Money-Back Guarantee</h2>
                         <p class="p-2">If you are not 100% satisfied, you can request a refund of your payment within 7 days after
@@ -789,8 +795,8 @@
 
     <!-- faq section -->
     <div class="container py-3">
-        <div class="row p-2" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50">
-            <div class="offset-sm-1 p-3 offset-lg-1 col-lg-10 col-sm-10 offset-lg-1 offset-sm-1 price_end">
+        <div class="row p-2" data-aos="fade-up" data-aos-offset="200" data-aos-delay="70">
+            <div class="col-12 price_end">
                 <div>
                     <h4>FAQs on WordPress </h4>
                     <!-- <p>
