--- a/wordpress-hosting.html
+++ b/wordpress-hosting.html
@@ -247,10 +247,9 @@
 
     <div class="container-fluid background_random">
         <div class="container">
-            <div class="row row-design_gap d-flex py-5" >
+            <div class="row row-design_gap d-flex py-5 g-5" >
                 <div class="col-md-7 col-lg-6 col-sm-12  ">
-                    <div class="first_section ">
-                      
+                    <div class="first_section ">                      
                         <h2> Best <span style="text-transform: uppercase;"> Wordpress Hosting </span> Provider In India</h2>
                         <!-- <p>Buy Best Linux CPanel Shared Hosting In India - Domgys</p> -->
                         <br>
@@ -260,7 +259,7 @@
 
                 <div class="col-md-5 col-lg-6 col-sm-12 ">
                     <div class="second_image  ">
-                        <img src="./assests_wordpress_hosting/img/website-host.jpg" class="rounded" alt="Dedicated Server Hosting . ">
+                        <img src="./assests_wordpress_hosting/img/website-host.jpg" style="width: 100%;" class="rounded" alt="Dedicated Server Hosting . " title="Dedicated Server Hosting">
                     </div>
                 </div>
             </div>
