--- a/wordpress-hosting.html
+++ b/wordpress-hosting.html
@@ -94,7 +94,7 @@
 -->
   
 <header id="header" class="header d-flex align-items-center sticky-top w-100">
-  <div class="container-fluid position-relative d-flex align-items-center justify-content-around">
+  <div class="container-fluid position-relative d-flex_header d-flex align-items-center justify-content-around">
 
     <a href="https://domgys.in/index.html" class="logo d-flex align-items-center me-auto me-xl-0">
       <!-- Uncomment the line below if you also wish to use an image logo -->
@@ -112,27 +112,26 @@
           <ul>
             <li><a href="https://domgys.in/register-a-domain.html">Register A
                 Domain </a></li>
-            <li><a href="https://domgys.in/shared-hosting.html">Best CPanel
-                shared Hosting in
-                India</a></li>
-            <li><a href="https://domgys.in/window-shared-hosting.html">Plesh
+            <li><a href="https://domgys.in/shared-hosting.html">CPanel
+                shared Hosting</a></li>
+            <li><a href="https://domgys.in/window-shared-hosting.html">Plesk
                 Shared Hosting
               </a></li>
-            <li><a href="https://domgys.in/wordpress-hosting.html">Buy Best
+            <li><a href="https://domgys.in/wordpress-hosting.html">
                 Wordpress
                 Hosting</a></li>
-            <li><a href="https://domgys.in/business-hosting.html">Best
-                Business hoting Sevice
-                in India</a></li>
+            <li><a href="https://domgys.in/business-hosting.html">
+                Business hosting Service
+              </a></li>
             <li>
               <a href="https://domgys.in/transfer-your-domain.html">Transfer
                 Your Domain </a>
             </li>
             <li>
-              <a href="https://domgys.in/domain-pricing.php">Check Best
+              <a href="https://domgys.in/domain-pricing.php">
                 Domain Pricing</a>
             </li>
-            <li><a href="https://domgys.in/reseller-hosting.html">Best Shared
+            <li><a href="https://domgys.in/reseller-hosting.html">Shared
                 cloud Linux
                 Hosting</a></li>
           </ul>
@@ -162,6 +161,8 @@
                 Email</a></li>
             <li><a href="https://domgys.in/Hostedemail.html">Hosted E-mail</a>
             </li>
+            <li><a href="https://developmentraahi.github.io/email-filtering/anti-spam.html">Anti Spam</a>
+            </li>
           </ul>
         </li>
         <!-- dropdown menu -->
@@ -185,17 +186,29 @@
               </ul>
             </li>
             <li><a href="https://domgys.in/cloud-backup-solutions.html">
-                Cloud Backup Solutions</a></li>
+                Acronis- Cyber Backup Solutions</a>
+            </li>
+            <li><a href="https://domgys.in/pc-backup-solutions.html">
+                PC-Backup Solutions</a>
+            </li>
+            <li class="dropdown " id="deep_menu"><a href="#"><span>Cyber Security</span> <i
+                  class="bi bi-chevron-down toggle-dropdown"></i></a>                <ul>
+                <li><a href="#">EDR</a></li>
+                <li><a href="#">XDR</a></li>
+                <li><a href="#">MDR</a></li>                  
+              </ul>
+            </li>
+            
           </ul>
         </li>
         <li class="dropdown">
           <a href="#"><span>Domains</span> <i class="bi bi-chevron-down toggle-dropdown"></i>
           </a>
           <ul>
-            <li><a href="https://domgys.in/in-domain.html">.In </a></li>
-            <li><a href="https://domgys.in/com-domain.html">.Com</a></li>
-            <li><a href="https://domgys.in/bank-domain.html">.Bank </a></li>
-            <li><a href="https://domgys.in/insurance-domain.html">.insurance</a></li>
+            <li><a href="https://domgys.in/in-domain.html">Book .In domain</a></li>
+            <li><a href="https://domgys.in/com-domain.html">Book .Com domain</a></li>
+            <li><a href="https://domgys.in/bank-domain.html">Book .Bank domain </a></li>
+            <li><a href="https://domgys.in/insurance-domain.html">Book .insurance domain</a></li>
           </ul>
         </li>
         <li class="close-md-screen">
@@ -207,29 +220,29 @@
             Sign In</a>
         </li> -->
 
-        <li  class="close-md-screen">
-          <a href="https://clients.domgys.in/contact.php" aria-current="page">Contact
-            us</a>
-        </li>
-        <li class="dropdown open-md-screen">
-          <a href="#"> <i class="bi bi-three-dots toggle-dropdown"></i>
-          </a>
-          <ul>
-            <li><a href="https://domgys.in/Blog-Domgys.html" aria-current="page">Blogs</a></li>
-            <li><a href="https://clients.domgys.in/contact.php" aria-current="page">Contact
-            us</a></li>
-            <li><a href="https://domgys.in/Become-Our-Partner.html" aria-current="page">
-            Become Our Partner</a></li>              
-          </ul>
-        </li>
-        <li  class="close-md-screen">
-          <a href="https://domgys.in/Blog-Domgys.html" aria-current="page">Blogs</a>
-        </li>
-      </ul>
-      <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-    </nav>
+      <li class="close-md-screen">
+        <a href="https://clients.domgys.in/contact.php" aria-current="page">Contact
+          us</a>
+      </li>
+      <li class="dropdown open-md-screen">
+        <a href="#"> <i class="bi bi-three-dots toggle-dropdown"></i>
+        </a>
+        <ul>
+          <li><a href="https://domgys.in/Blog-Domgys.html" aria-current="page">Blogs</a></li>
+          <li><a href="https://clients.domgys.in/contact.php" aria-current="page">Contact
+              us</a></li>
+          <li><a href="https://domgys.in/Become-Our-Partner.html" aria-current="page">
+              Become Our Partner</a></li>
+        </ul>
+      </li>
+      <li class="close-md-screen">
+        <a href="https://domgys.in/Blog-Domgys.html" aria-current="page">Blogs</a>
+      </li>
+    </ul>
+    <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+  </nav>
 
-    <a class="btn-getstarted" href="https://clients.domgys.in/login"> Sign In</a>
+  <a class="btn-getstarted" href="https://clients.domgys.in/login"> Sign In</a>
 
   </div>
 </header>
@@ -290,7 +303,7 @@
                             <h1>Best wordpress Hosting Provider In India 2024 – Domgys</h1>
                         </div>
                         <!-- <br> -->
-                        <p>In 2024, Domgys has solidified its position as the premier WordPress hosting provider in India. Known for 
+                        <p> Domgys has solidified its position as the premier WordPress hosting provider in India. Known for 
                           its exceptional speed and reliability, Domgys ensures that your website runs smoothly, boasting 99.9% 
                           uptime and lightning-fast loading times that enhance user experience and improve SEO rankings.
                         <br>
