--- a/Reseller-hosting.html
+++ b/Reseller-hosting.html
@@ -273,7 +273,7 @@
 
                 <div class="col-md-5 col-lg-6 col-sm-12 ">
                     <div class="second_image  ">
-                        <img src="./reseller_hosting/img/website-host.jpg" style="width: 100%;" class="rounded" alt="Reseller hosting"  title="Dedicated Server Hosting">
+                        <img src="./reseller_hosting/img/resel.webp" style="width: 100%;" class="rounded" alt="Reseller hosting"  title="Dedicated Server Hosting">
                     </div>
                 </div>
             </div>
@@ -294,7 +294,7 @@
             <div class="row g-4" data-aos="fade-up">
                 <div class="col-lg-5 col-12 row_center  ">
                     <div class="section_section_img" >
-                        <img src="./reseller_hosting/img/web_host.jpg" alt="Dedicated Server Hosting">
+                        <img src="./reseller_hosting/img/resell.webp" alt="Dedicated Server Hosting">
                     </div>
                 </div>
                 <div class="col-lg-7  col-12 ">
