--- a/Reseller-hosting.html
+++ b/Reseller-hosting.html
@@ -294,7 +294,7 @@
             <div class="row g-4" data-aos="fade-up">
                 <div class="col-lg-5 col-12 row_center  ">
                     <div class="section_section_img" >
-                        <img src="./reseller_hosting/img/resell.webp" alt="Dedicated Server Hosting">
+                        <img src="./reseller_hosting/img/resell.webp" alt=" Reseller hosting">
                     </div>
                 </div>
                 <div class="col-lg-7  col-12 ">
