update img dimension

--- a/Reseller-hosting.html
+++ b/Reseller-hosting.html
@@ -249,20 +249,10 @@
 </header>
   <!-- navbar end -->
 
-
-
-    <!-- hero section -->
-
- <style>
-
- 
-  
- </style>
-
     <div class="container-fluid background_random">
         <div class="container">
-            <div class="row row-design_gap d-flex py-5 g-5" >
-                <div class="col-md-7 col-lg-6 col-sm-12  ">
+            <div class="row row-design_gap d-flex py-5 g-5 " >
+                <div class="col-md-7 col-lg-6 col-sm-12  order-1 order-md-0 order-lg-0 ">
                     <div class="first_section ">                      
                         <h2>  <span style="text-transform: uppercase;"> Cloud Linux </span> C-panel Hosting</h2>
                         <!-- <p>Buy Best Linux CPanel Shared Hosting In India - Domgys</p> -->
@@ -271,7 +261,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-5 col-lg-6 col-sm-12 ">
+                <div class="col-md-5 col-lg-6 col-sm-12 order-0 order-md-1 order-lg-1">
                     <div class="second_image  ">
                         <img src="./reseller_hosting/img/resel.webp" style="width: 100%;" class="rounded" alt="Reseller hosting"  title="Dedicated Server Hosting">
                     </div>
